# sabi-wallet-backend

./: .env.example  .gitignore  ANALYSIS_SUMMARY.md  BACKEND_API_FORM.md  CODEBASE_ANALYSIS.md  Cargo.toml  Dockerfile  PROJECT_ANALYSIS.md  README.md  docker-compose.yml
.gemini/: instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  help.yml  translation.yml
migrations/: 20251126120000_initial_setup.sql
src/: app_state.rs  cli.rs  config.rs  database.rs  error.rs  main.rs  routes.rs
src/.github/ISSUE/: bug_report.yml
src/api/: admin.rs  mod.rs  recovery.rs  ussd.rs  wallet.rs  webhooks.rs
src/bitcoin/: breez.rs  mod.rs
src/domain/: models.rs  types.rs
src/nostr/: client.rs  relay.rs
src/services/: admin_service.rs  breez_service.rs  fiat_service.rs  mod.rs  nostr_service.  nostr_service.rs  recovery_service.rs  ussd_service.rs  wallet_service.rs
src/utils/: phone_number.rs
