[package]
name = "sabi_wallet_backend"
version = "0.1.0"
edition = "2021"
authors = ["Sabi Wallet Engineering <eng@sabi.money>"]
description = "Backend for Sabi Wallet, a non-custodial Nigerian/African Bitcoin + Lightning + Nostr wallet."
license = "MIT"

[dependencies]
# Web Server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-gzip"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "macros", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration & Env
dotenvy = "0.15"
config = "0.14"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sentry = { version = "0.34", features = ["axum", "tracing"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Crypto & Security
rust-argon2 = "2.0"
uuid = { version = "1.6", features = ["v1", "v4", "serde"] }
hmac = "0.12"
sha2 = "0.10"
secrecy = { version = "0.8", features = ["serde"] }

# Bitcoin / Lightning / Nostr
nostr-sdk = "0.27"
breez-sdk-core = { git = "https://github.com/breez/breez-sdk.git", rev = "a1b2c3d" } # Example git rev, replace with actual
shamir = "0.2" # Using this one for simplicity, 'secret-sharing' is also a good option
bitcoin = "0.31"

# API Client & Web
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
url = "2.5"

# Caching & State
redis = { version = "0.25", features = ["tokio-comp"] }

# Email/SMS
lettre = { version = "0.11", features = ["builder", "smtp-transport", "tokio1-rustls"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }
phonenumber = "0.3"

[dev-dependencies]
rstest = "0.18"
mockall = "0.12"
fake = "2.9"
serde_assert = "0.1"
wiremock = "0.6"
